mdapioutput/objects/User.object
<CustomObject>
    <fields>
        <fullName>oAuthEndpoint__c</fullName>
        <label>oAuth Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oAuthPassword__c</fullName>
        <label>oAuth Password</label>
        <length>170</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>oAuthUserName__c</fullName>
        <label>oAuth User Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecurityToken__c</fullName>
        <label>Security Token</label>
        <length>170</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
</CustomObject>